# linear-types-talk-jan-2021

./: README.md  build  present  shell-stack.nix  stack.yaml  talk.cabal
slides/: talk.md
src/: Example1.hs  Example2.hs  Misc.hs  Quantum.hs
