cabal-version: 1.12

name:           talk
version:        0.1.0.0
category:       Web
homepage:       https://github.com/silky/linear-types-talk-jan-2021#readme
author:         Noon van der Silk
maintainer:     noonsilk@gmail.com
copyright:      Noon van der Silk
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

library
  exposed-modules:
      Example1
      Example2
      Quantum
  other-modules:
      Paths_talk
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , ghc-prim
    , linear-base
  default-language: Haskell2010
